# rfc_draw

./: #rdd-to-ascii.py#  #rdd_to_ascii-5aug.py#  #rfc-draw-notes.txt#  #save-xx3a.rdd#  .#rfc-draw-notes.txt  .gitignore  2-Rectangles.rdd  2-Rectangles.rdd~  2722-output.txt  4-lines-v2.rdd  Gmail.html  IS-IAB-comments.txt  README.html  README.md  RFC2722-TM-Architecture-v2.rdd  RFC2722-TM-Architecture.txt  RFC4302-AH.rdd~  RFC4302-AH.txt  RFC4302-AHqqq.rdd  RFC5755-AC-Exchanges.txt  RFC9293-TCP-qqq.rdd  RFC9293-TCP.rdd  RFC9293-TCP.rdd~  RFC9293-TCP.txt  RFC9293-TCPv.rdd  RFC941-test.rdd  RFC941-test.rdd~  RFC941-test.txt  RFC9491-NSH+SFC-Sat.rdd  RFC9491-NSH+SFC-Sun.rdd  RFC9491-NSH+SFC-test.rdd  RFC9491-NSH+SFC.rdd  RFC9491-NSH+SFC.rdd~  RFC9491-NSH+SFC.txt  RFC9491-NSH+SFC.xxx  Rectangle-text.txt  Text-in-Rectangle.rdd  Text-in-Rectangle.txt  arrow_lines_class.py  bad-2n_rects.rdd  (+313 more)
Gmail_files/: 2024-08-25 17-10-12.mkv  CheckConnection.html
RFC-Draw/: README.md  install_modules.py  save-file.rdd  setup.py  test-im.py~
draft-mcquistin-augmented-ascii-diagrams-13_files/: a.html  document_html.js  document_html_referenced.css  document_html_txt.css
example-diagrams/: RFC2722-TM-Architecture.rdd  RFC2722-TM-Architecture.txt  RFC3924-Intercept-Architecture.rdd  RFC4302-AH.rdd  RFC5755-AC-Exchanges.rdd  RFC5755-AC-Exchanges.txt  SVG-1.2-RFC.rnc  monospace-text+line.rdd
pkt-header/: draw_headers_class.py  draw_headers_class.py~  pkt-layout.py  pkt-layout.py~
re — Regular expression operations — Python 3.12.0 documentation_files/: switchers.js
rnc/: xxx.yyy  (+3 more)
(+10 files in other folders)
